# josephine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  tarpaulin.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: josephine.rb
crates/josephine/: Cargo.toml
crates/josephine-cli/: Cargo.toml
crates/josephine-cli/src/: main.rs
crates/josephine-cli/src/commands/: config_cmd.rs  daemon_cmd.rs  doctor_cmd.rs  history_cmd.rs  mod.rs  stub_cmd.rs
crates/josephine-cli/src/output/: bars.rs  doctor.rs  mod.rs  runner.rs  status.rs  style.rs
crates/josephine-core/: Cargo.toml
crates/josephine-core/benches/: rules.rs
crates/josephine-core/migrations/: V001__init.sql
crates/josephine-core/src/: check.rs  config.rs  daemon.rs  i18n.rs  lib.rs  messages.rs  notify.rs  paths.rs  rules.rs  scheduler.rs  storage.rs  update.rs  voice.rs
crates/josephine-core/src/checks/: battery.rs  cpu.rs  disk.rs  filesystem.rs  inode.rs  kernel.rs  memory.rs  mod.rs  network.rs  security.rs  smart.rs  systemd.rs  temperature.rs  timesync.rs  updates.rs
crates/josephine/src/: cli.rs  main.rs
crates/josephine/src/commands/: clean_cmd.rs  config_cmd.rs  daemon_cmd.rs  doctor_cmd.rs  explain_cmd.rs  fix_cmd.rs  history_cmd.rs  mod.rs  notify_cmd.rs  report_cmd.rs  status_cmd.rs  stub_cmd.rs  update_cmd.rs
crates/josephine/src/output/: bars.rs  doctor.rs  json.rs  mod.rs  runner.rs  status.rs  style.rs
crates/josephine/tests/: cli.rs
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEVELOPMENT.md  README.fr.md  README.md  ROADMAP.md
docs/superpowers/plans/: 2026-06-29-josephine-v02-plan.md  2026-06-30-josephine-phase1-standards-and-code.md  2026-06-30-josephine-phase3-governance.md  2026-06-30-josephine-phase4-ci.md  2026-06-30-josephine-phase5-packaging.md  2026-06-30-josephine-phase6-site.md  2026-07-08-josephine-cli-render-tone.md  2026-07-09-josephine-cli-increment-b.md  2026-07-09-josephine-cli-increment-c.md  2026-07-09-josephine-cli-increment-d.md
docs/superpowers/specs/: 2026-06-29-josephine-v01-design.md  2026-06-29-josephine-v02-design.md  2026-06-30-josephine-template-alignment-design.md  2026-07-08-josephine-cli-render-tone-design.md
packaging/aur/: PKGBUILD
packaging/homebrew/: josephine.rb
packaging/systemd/: josephine.service
resources/: banner.txt
site/: config.toml
site/content/: _index.fr.md  _index.md
site/sass/: main.scss
site/templates/: base.html  index.html  macros.html
