[package]
name = "josephine-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for Joséphine — system guardian"
keywords = ["monitoring", "system", "daemon"]
categories = ["os"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
notify-rust.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
