[package]
name = "josephine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Joséphine — your computer's guardian angel"
documentation = "https://docs.rs/josephine"
readme = "../../README.md"
keywords = ["cli", "monitoring", "system", "guardian", "daemon"]
categories = ["command-line-utilities"]

[[bin]]
name = "josephine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
josephine-core = { path = "../josephine-core", version = "0.1.0" }
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
