[package]
name = "josephine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Joséphine — your computer's guardian angel"
documentation = "https://docs.rs/josephine"
readme = "../../README.md"
keywords = ["cli", "monitoring", "system", "guardian", "daemon"]
categories = ["command-line-utilities"]

[[bin]]
name = "josephine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
josephine-core = { path = "../josephine-core", version = "0.3.0" }
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Kevin Delfour <k@levilainpetit.dev>"
copyright = "2026, Kevin Delfour"
extended-description = "Joséphine watches your Linux machine and warns you, kindly, before something goes wrong. Local-only, no cloud."
section = "utils"
priority = "optional"
assets = [
    ["../../target/release/josephine", "usr/bin/", "755"],
    ["../../packaging/systemd/josephine.service", "usr/lib/systemd/user/josephine.service", "644"],
    ["../../README.md", "usr/share/doc/josephine/README.md", "644"],
    ["../../LICENSE-MIT", "usr/share/doc/josephine/LICENSE-MIT", "644"],
    ["../../LICENSE-APACHE", "usr/share/doc/josephine/LICENSE-APACHE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/josephine", dest = "/usr/bin/josephine", mode = "755" },
    { source = "packaging/systemd/josephine.service", dest = "/usr/lib/systemd/user/josephine.service", mode = "644" },
    { source = "LICENSE-MIT", dest = "/usr/share/licenses/josephine/LICENSE-MIT", mode = "644" },
    { source = "LICENSE-APACHE", dest = "/usr/share/licenses/josephine/LICENSE-APACHE", mode = "644" },
]
